After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 705126 - Fix logic for scrolling treeview to the bottom
Fix logic for scrolling treeview to the bottom
Status: RESOLVED FIXED
Product: system-monitor
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: System-monitor maintainers
System-monitor maintainers
Depends on:
Blocks:
 
 
Reported: 2013-07-30 08:53 UTC by Stefano Facchini
Modified: 2013-07-30 21:25 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix logic for scrolling treeview to the bottom (2.95 KB, patch)
2013-07-30 08:53 UTC, Stefano Facchini
committed Details | Review

Description Stefano Facchini 2013-07-30 08:53:16 UTC
Currently, I'm experiencing from time to time seemingly random jumps to 
the end of the process list. I found out it happens when new processes 
are added, the patch attached fixes it.
Comment 1 Stefano Facchini 2013-07-30 08:53:19 UTC
Created attachment 250436 [details] [review]
Fix logic for scrolling treeview to the bottom

It should scroll when the treeview was already scrolled to
the bottom (i.e. last_vscroll_value == last_vscroll_max).

While touching it, fix style and simplify a conditional.
Comment 2 Robert Roth 2013-07-30 21:25:19 UTC
Attachment 250436 [details] pushed as c46bf03 - Fix logic for scrolling treeview to the bottom