Fix logic for scrolling treeview to the bottom

It should scroll when the treeview was already scrolled to
the bottom (i.e. last_vscroll_value == last_vscroll_max).

While touching it, fix style and simplify a conditional.

https://bugzilla.gnome.org/show_bug.cgi?id=705126